--- a/index.html
+++ b/index.html
@@ -6,12 +6,18 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Zingen - Karaokê</title>
-    <link rel="stylesheet" href="./stytles/index.css" />
+    <link rel="stylesheet" href="./styles/index.css" />
 
     <link
       href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
       rel="stylesheet"
     />
   </head>
-  <body></body>
+  <body>
+    <header>
+      <div class="container">
+      <h1>Teste</h1>
+    </div>
+    </header>
+  </body>
 </html>
