Adicionando classes utilitárias parte 2

--- a/index.html
+++ b/index.html
@@ -15,9 +15,10 @@
   </head>
   <body>
     <header>
-      <div class="container">
-      <h1>Teste</h1>
-    </div>
+      <div class="container even-columns">
+        <h1>lado a</h1>
+        <h1>lado b</h1>
+      </div>
     </header>
   </body>
 </html>
