--- a/index.html
+++ b/index.html
@@ -19,5 +19,10 @@
       <a href="#" class="btn btn-md">Label </a>
       <button href="#" class="btn btn-lg">Label</button>
     </div>
+    <div class="flex">
+      <a href="#" class="btn btn-sm" aria-label="Label"></a>
+      <a href="#" class="btn btn-md" aria-label="Label"></a>
+      <button href="#" class="btn btn-lg" aria-label="Label"></button>
+    </div>
   </body>
 </html>
