--- a/index.html
+++ b/index.html
@@ -14,15 +14,11 @@
     />
   </head>
   <body>
-    <div class="flex">
-      <a href="#" class="btn btn-sm">Label </a>
-      <a href="#" class="btn btn-md">Label </a>
-      <button href="#" class="btn btn-lg">Label</button>
-    </div>
-    <div class="flex">
-      <a href="#" class="btn btn-sm" aria-label="Label"></a>
-      <a href="#" class="btn btn-md" aria-label="Label"></a>
-      <button href="#" class="btn btn-lg" aria-label="Label"></button>
-    </div>
+    <div class="flex gap-1">
+    <a href="" class="social" aria-label="tiktok"></a>
+    <a href="" class="social" aria-label="discord"></a>
+    <a href="" class="social" aria-label="twitter"></a>
+    <a href="" class="social" aria-label="instagram"></a>
+  </div>
   </body>
 </html>
