--- a/index.html
+++ b/index.html
@@ -14,11 +14,19 @@
     />
   </head>
   <body>
-    <div class="flex gap-1">
-    <a href="" class="social" aria-label="tiktok"></a>
-    <a href="" class="social" aria-label="discord"></a>
-    <a href="" class="social" aria-label="twitter"></a>
-    <a href="" class="social" aria-label="instagram"></a>
-  </div>
+    <header>
+      <div class="container py-base">
+        <nav class="flex items-center gap-1.5">
+          <a href="#">
+            <img src="./assets/logo.svg" alt="">
+          </a>
+          <a class="desktop-only" href="#about">Conheça o app</a>
+          <a class="desktop-only" href="#features">Funcionalidades</a>
+          <a class="desktop-only" href="#princing">Planos e preços</a>
+
+          <a href="#download" class="btn btn-sm">Baixar agora</a>
+        </nav>
+      </div>
+    </header>
   </body>
 </html>
